#
# Copyright © 2025 Agora
# This file is part of APTIMA Framework, an open source project.
# Licensed under the Apache License, Version 2.0, with certain conditions.
# Refer to the "LICENSE" file in the root directory for more information.
#
import("//build/aptima_runtime/glob.gni")
import("//build/aptima_runtime/aptima.gni")

glob("notify_test") {
  file_list = all_native_files

  include_dirs = [
    "//packages",
    "//tests/aptima_runtime",
  ]

  deps = [
    "//core/src/aptima_runtime",
    "//tests/common/client",
    "//tests/common/server",
    "//third_party/msgpack:msgpackc",
    "//third_party/nlohmann_json",
  ]

  public_deps = [
    "//third_party/googlemock",
    "//third_party/googletest",
  ]
}
