#
# Copyright © 2025 Agora
# This file is part of APTIMA Framework, an open source project.
# Licensed under the Apache License, Version 2.0, with certain conditions.
# Refer to the "LICENSE" file in the root directory for more information.
#
import("//build/aptima_runtime/feature/test.gni")
import("//build/aptima_runtime/aptima.gni")

aptima_package_test_prepare_app("app_1") {
  src_app = "default_app_cpp"
  src_app_language = "cpp"
  generated_app_src_root_dir_name = "app_1_source"

  replace_files_after_install_app = [
    "app_1_source/manifest.json",
    "app_1_source/property.json",
    "app_1_source/aptima_packages",
  ]

  if (aptima_enable_aptima_manager) {
    deps = [
      "//core/src/aptima_manager",
      "//core/src/aptima_runtime:upload_aptima_runtime_system_package_to_server",
      "//packages/core_apps/default_app_cpp:upload_default_app_cpp_to_server",
      "//packages/core_extensions/default_extension_cpp:upload_default_extension_cpp_to_server",
      "//packages/core_protocols/msgpack:upload_protocol_msgpack_to_server",
    ]
  }
}

aptima_package_test_prepare_app("app_2") {
  src_app = "default_app_cpp"
  src_app_language = "cpp"
  generated_app_src_root_dir_name = "app_2_source"

  replace_files_after_install_app = [
    "app_2_source/manifest.json",
    "app_2_source/property.json",
    "app_2_source/aptima_packages",
  ]

  if (aptima_enable_aptima_manager) {
    deps = [
      "//core/src/aptima_manager",
      "//core/src/aptima_runtime:upload_aptima_runtime_system_package_to_server",
      "//packages/core_apps/default_app_cpp:upload_default_app_cpp_to_server",
      "//packages/core_extensions/default_extension_cpp:upload_default_extension_cpp_to_server",
      "//packages/core_protocols/msgpack:upload_protocol_msgpack_to_server",
    ]
  }
}

aptima_package_test_prepare_client("multi_apps_client") {
  sources = [ "client/client.cc" ]
  include_dirs = [
    "//core/src",
    "//core",
    "//packages",
    "//tests",
  ]
  deps = [
    "//core/src/aptima_runtime",
    "//packages/core_protocols/msgpack:msgpack_files",
    "//tests/common/client:msgpack_client",
    "//third_party/msgpack:msgpackc",
    "//third_party/nlohmann_json",
  ]
}

aptima_package_test_prepare_auxiliary_resources("multi_apps_test_files") {
  resources = [
    "//tests/aptima_runtime/integration/common=>common",
    "__init__.py",
    "test_case.py",
  ]
}

group("multi_apps") {
  deps = [
    ":app_1",
    ":app_2",
    ":multi_apps_client",
    ":multi_apps_test_files",
  ]
}
