#
# Copyright © 2025 Agora
# This file is part of APTIMA Framework, an open source project.
# Licensed under the Apache License, Version 2.0, with certain conditions.
# Refer to the "LICENSE" file in the root directory for more information.
#
import("//build/aptima_runtime/feature/test.gni")
import("//build/aptima_runtime/aptima.gni")

aptima_package_test_prepare_app("expired_aptima_go_app") {
  src_app = "default_app_go"
  src_app_language = "go"
  generated_app_src_root_dir_name = "expired_aptima_go_app"

  replace_files_after_install_app = [
    "expired_aptima_go_app/manifest.json",
    "expired_aptima_go_app/property.json",
    "expired_aptima_go_app/aptima_packages",
    "expired_aptima_go_app/go_common_dep",
    "expired_aptima_go_app/go.mod",
  ]

  if (aptima_enable_aptima_manager) {
    deps = [
      "//core/src/aptima_manager",
      "//packages/core_apps/default_app_go:upload_default_app_go_to_server",
      "//packages/core_extensions/default_extension_go:upload_default_extension_go_to_server",
      "//packages/core_protocols/msgpack:upload_protocol_msgpack_to_server",
    ]
  }
}

aptima_package_test_prepare_client("expired_aptima_go_app_client") {
  sources = [ "client/client.cc" ]
  include_dirs = [
    "//core/src",
    "//core",
    "//packages",
    "//tests",
  ]
  deps = [
    "//core/src/aptima_runtime",
    "//packages/core_protocols/msgpack:msgpack_files",
    "//tests/common/client:msgpack_client",
    "//third_party/msgpack:msgpackc",
    "//third_party/nlohmann_json",
  ]
}

aptima_package_test_prepare_auxiliary_resources("expired_aptima_go_app_test_files") {
  resources = [
    "//tests/aptima_runtime/integration/common=>common",
    "__init__.py",
    "test_case.py",
  ]
}

group("expired_aptima_go") {
  deps = [
    ":expired_aptima_go_app",
    ":expired_aptima_go_app_client",
    ":expired_aptima_go_app_test_files",
  ]
}
